Code migration: CWE-477 – replace deprecated boxed constructors, JsonParser.parse(), and String-charset URLEncoder/URLDecoder/String APIs