@@ -84,7 +84,7 @@ public class MySQLUsersConfiguration extends JDBCConfiguration {
 
 	@Override
 	public Integer getDefaultPort() {
-		return new Integer(3306);
+		return Integer.valueOf(3306);
 	}
 
 	@Override
